--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -2,23 +2,12 @@
   Breakpoints
 */
 $small-breakpoint: 568px;
-$breakpoint: 48em;
+$breakpoint: 768px;
 $large-breakpoint: 1200px;
 
 /*
   Colors
 */
-// Light theme
-// $link-color: #FF522A;
-// $link-active: #FF522A; // red/orange
-// $sidebar-main: whitesmoke;
-// $sidebar-text: #333;
-// $sidebar-link: #333;
-// $sidebar-text-subtle: #666;
-// $sidebar-text-inverse: #333;
-// $sidebar-text-inverse-subtle: #666;
-
-// Dark theme
 $red: #FF522A;
 $dark-blue: #263249;
 $light-blue: #3D759D;
